--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -68,17 +68,37 @@ jobs:
 
       - name: Update formula
         run: |
+          set -e
           VERSION=${GITHUB_REF_NAME}
-          URL="https://github.com/lucalorenzon/brew-maintainer/archive/${VERSION}.tar.gz"
-          SHA=$(awk '{print $1}' SHA256SUMS.txt)
+          OWNER=${GITHUB_REPOSITORY_OWNER}
+          REPO_NAME=$(basename $GITHUB_REPOSITORY)
+          BIN_NAME="brew-maintainer"
 
+          # Get the SHA256 from your built file
+          SHA=$(awk '{print $1}' ../${REPO_NAME}/dist/SHA256SUMS.txt)
           if [ -z "$SHA" ]; then
             echo "Error: SHA256 not found!"
             exit 1
           fi
 
-          sed -i "s|url \".*\"|url \"${URL}\"|" Formula/brew-maintainer.rb
-          sed -i "s|sha256 \".*\"|sha256 \"${SHA}\"|" Formula/brew-maintainer.rb
+          # Construct URLs
+          BASE_URL="https://github.com/${OWNER}/${REPO_NAME}"
+          DOWNLOAD_URL="${BASE_URL}/releases/download/${VERSION}/${BIN_NAME}-${VERSION}-x86_64-macos.tar.gz"
+
+          echo "🔗 Updating formula with:"
+          echo "  Version: ${VERSION}"
+          echo "  Owner: ${OWNER}"
+          echo "  URL: ${DOWNLOAD_URL}"
+          echo "  SHA: ${SHA}"
+
+          FORMULA_PATH="Formula/brew-maintainer.rb"
+
+          # Replace placeholders
+          sed -i "s|https://github.com/<REPLACED_BY_GITHUB_ACTION>|${BASE_URL}|" $FORMULA_PATH
+          sed -i "s|version \"<REPLACED_BY_GITHUB_ACTION>\"|version \"${VERSION#v}\"|" $FORMULA_PATH
+          sed -i "s|url \"<REPLACED_BY_GITHUB_ACTION>\"|url \"${DOWNLOAD_URL}\"|" $FORMULA_PATH
+          sed -i "s|sha256 \"<REPLACED_BY_GITHUB_ACTION>\"|sha256 \"${SHA}\"|" $FORMULA_PATH
+          sed -i "s|com.<REPLACED_BY_GITHUB_ACTION>.brew-maintainer|com.${OWNER}.brew-maintainer|" $FORMULA_PATH
 
       - name: Commit and push formula update
         run: |
