--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,25 +51,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  update-formula:
-    name: Update Homebrew Formula
-    needs: build-release
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout tap repository
-        uses: actions/checkout@v4
-        with:
-          repository: lucalorenzon/homebrew-tap
-          token: ${{ secrets.HOMEBREW_TAP_TOKEN }}
-          persist-credentials: true
-
-      - name: Download checksum artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: sha256sum
-
-      - name: Update formula
+      - name: Update Homebrew Tap Formula
         run: |
           set -e
           VERSION=${GITHUB_REF_NAME}
@@ -77,14 +59,17 @@ jobs:
           REPO_NAME=$(basename $GITHUB_REPOSITORY)
           BIN_NAME="brew-maintainer"
 
-          # Get the SHA256 from your built file
-          SHA=$(awk '{print $1}' SHA256SUMS.txt)
+          # Clone the tap repo
+          git clone https://github.com/${OWNER}/homebrew-tap.git ../homebrew-tap
+          cd ../homebrew-tap
+
+          # Get SHA
+          SHA=$(cat ../${REPO_NAME}/dist/SHA256SUMS.txt)
           if [ -z "$SHA" ]; then
             echo "Error: SHA256 not found!"
             exit 1
           fi
 
-          # Construct URLs
           BASE_URL="https://github.com/${OWNER}/${REPO_NAME}"
           DOWNLOAD_URL="${BASE_URL}/releases/download/${VERSION}/${BIN_NAME}-${VERSION}-x86_64-macos.tar.gz"
 
@@ -94,19 +79,19 @@ jobs:
           echo "  URL: ${DOWNLOAD_URL}"
           echo "  SHA: ${SHA}"
 
-          FORMULA_PATH="Formula/brew-maintainer.rb"
+          # Copy the template from main repo and replace placeholders
+          mkdir -p Formula
+          cp ../${REPO_NAME}/FormulaTemplate/brew-maintainer.rb Formula/brew-maintainer.rb
 
-          # Replace placeholders
-          sed -i "s|https://github.com/<REPLACED_BY_GITHUB_ACTION>|${BASE_URL}|" $FORMULA_PATH
-          sed -i "s|version \"<REPLACED_BY_GITHUB_ACTION>\"|version \"${VERSION#v}\"|" $FORMULA_PATH
-          sed -i "s|url \"<REPLACED_BY_GITHUB_ACTION>\"|url \"${DOWNLOAD_URL}\"|" $FORMULA_PATH
-          sed -i "s|sha256 \"<REPLACED_BY_GITHUB_ACTION>\"|sha256 \"${SHA}\"|" $FORMULA_PATH
-          sed -i "s|com.<REPLACED_BY_GITHUB_ACTION>.brew-maintainer|com.${OWNER}.brew-maintainer|" $FORMULA_PATH
+          sed -i "s|https://github.com/<REPLACED_BY_GITHUB_ACTION>|${BASE_URL}|" Formula/brew-maintainer.rb
+          sed -i "s|version \"<REPLACED_BY_GITHUB_ACTION>\"|version \"${VERSION#v}\"|" Formula/brew-maintainer.rb
+          sed -i "s|url \"<REPLACED_BY_GITHUB_ACTION>\"|url \"${DOWNLOAD_URL}\"|" Formula/brew-maintainer.rb
+          sed -i "s|sha256 \"<REPLACED_BY_GITHUB_ACTION>\"|sha256 \"${SHA}\"|" Formula/brew-maintainer.rb
+          sed -i "s|com.<REPLACED_BY_GITHUB_ACTION>.brew-maintainer|com.${OWNER}.brew-maintainer|" Formula/brew-maintainer.rb
 
-      - name: Commit and push formula update
-        run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+
           git add Formula/brew-maintainer.rb
-          git commit -m "Update brew-maintainer formula to ${GITHUB_REF_NAME}"
+          git commit -m "Update brew-maintainer formula to ${VERSION}"
           git push origin main
