fix: tryied to adjust the sha256 path (removing dist) to fix the error of sha256 file not found

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,7 +64,7 @@ jobs:
           cd ../homebrew-tap
 
           # Get SHA
-          SHA=$(cat ../${REPO_NAME}/dist/SHA256SUMS.txt)
+          SHA=$(cat ../${REPO_NAME}/SHA256SUMS.txt)
           if [ -z "$SHA" ]; then
             echo "Error: SHA256 not found!"
             exit 1
