--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -83,11 +83,18 @@ jobs:
           mkdir -p Formula
           cp ../${REPO_NAME}/FormulaTemplate/brew-maintainer.rb Formula/brew-maintainer.rb
 
-          sed -i "s|https://github.com/<REPLACED_BY_GITHUB_ACTION>|${BASE_URL}|" Formula/brew-maintainer.rb
-          sed -i "s|version \"<REPLACED_BY_GITHUB_ACTION>\"|version \"${VERSION#v}\"|" Formula/brew-maintainer.rb
-          sed -i "s|url \"<REPLACED_BY_GITHUB_ACTION>\"|url \"${DOWNLOAD_URL}\"|" Formula/brew-maintainer.rb
-          sed -i "s|sha256 \"<REPLACED_BY_GITHUB_ACTION>\"|sha256 \"${SHA}\"|" Formula/brew-maintainer.rb
-          sed -i "s|com.<REPLACED_BY_GITHUB_ACTION>.brew-maintainer|com.${OWNER}.brew-maintainer|" Formula/brew-maintainer.rb
+          SED_CMD="sed"
+          if [[ "$OSTYPE" == "darwin"* ]]; then
+            SED_CMD="sed -i ''"
+          else
+            SED_CMD="sed -i"
+          fi
+
+          $SED_CMD "s|https://github.com/<REPLACED_BY_GITHUB_ACTION>|${BASE_URL}|" Formula/brew-maintainer.rb
+          $SED_CMD "s|version \"<REPLACED_BY_GITHUB_ACTION>\"|version \"${VERSION#v}\"|" Formula/brew-maintainer.rb
+          $SED_CMD "s|url \"<REPLACED_BY_GITHUB_ACTION>\"|url \"${DOWNLOAD_URL}\"|" Formula/brew-maintainer.rb
+          $SED_CMD "s|sha256 \"<REPLACED_BY_GITHUB_ACTION>\"|sha256 \"${SHA}\"|" Formula/brew-maintainer.rb
+          $SED_CMD "s|com.<REPLACED_BY_GITHUB_ACTION>.brew-maintainer|com.${OWNER}.brew-maintainer|" Formula/brew-maintainer.rb
 
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
