--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -116,25 +116,35 @@ jobs:
         working-directory: ./ # working dir is repo root where 'dist/' and 'Formula/' (template) reside
 
       # 6️⃣ Commit and push to tap repo
-      - name: Commit and push changes
+      - name: Commit and push updated formula to tap
+        env:
+          TAP_REPO: homebrew-tap
+          OWNER: myuser
+          VERSION: ${{ github.ref_name }}
+          GITHUB_ACTOR: ${{ github.actor }}
+          HOMEBREW_TAP_TOKEN: ${{ secrets.HOMEBREW_TAP_TOKEN }}
         run: |
           set -e
-          OWNER="lucalorenzon"
-          TAP_REPO="homebrew-tap"
+          echo "Committing and pushing to tap repo"
 
-          cd ../${TAP_REPO}
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          # Go back to your main workspace (not the template one)
+          cd "$GITHUB_WORKSPACE"
+
+          # Clone the tap repo using an authenticated URL
+          git clone "https://${GITHUB_ACTOR}:${HOMEBREW_TAP_TOKEN}@github.com/${OWNER}/${TAP_REPO}.git"
+          cd "${TAP_REPO}"
+
+          # Ensure Formula directory exists
+          mkdir -p Formula
+
+          # Copy updated formula from the parent repo
+          cp ../dist/brew-maintainer.rb Formula/brew-maintainer.rb
+
+          # Commit changes
+          git config user.name "${GITHUB_ACTOR}"
+          git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           git add Formula/brew-maintainer.rb
-          git commit -m "Update brew-maintainer formula to ${GITHUB_REF_NAME}" || echo "No changes to commit."
+          git commit -m "Update brew-maintainer formula to ${VERSION}" || echo "No changes to commit"
 
-          # ensure git has valid credentials in this job
-          git config --global credential.helper store
-          git config --global credential.useHttpPath true
-          echo "https://${GITHUB_ACTOR}:${{ secrets.HOMEBREW_TAP_TOKEN }}@github.com" > ~/.git-credentials
-
-          # guarantee the remote uses https (not ssh)
-          git remote set-url origin "https://github.com/${OWNER}/${TAP_REPO}.git"
-
-          # now safe to push
-          git push origin main
+          # Push to main with PAT authentication
+          git push "https://${GITHUB_ACTOR}:${HOMEBREW_TAP_TOKEN}@github.com/${OWNER}/${TAP_REPO}.git" main
