--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2024"
 
 [dependencies]
 chrono = { version = "0.4.42", default-features = false, features = ["now", "pure-rust-locales", "std", "clock"] }
+tracing = "0.1.41"
+tracing-appender = "0.2.3"
+tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
 
 [profile.release]
 debug = false
