--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,11 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.100"
 chrono = { version = "0.4.42", default-features = false, features = ["now", "pure-rust-locales", "std", "clock"] }
+nix = { version = "0.30.1", features = ["signal"] }
 serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
 serde_json = "1.0.145"
 thiserror = "2.0.17"
+tokio = { version = "1.48.0", features = ["io-std", "io-util", "macros", "process", "rt", "rt-multi-thread", "signal", "sync", "time"] }
 tracing = "0.1.41"
 tracing-appender = "0.2.3"
 tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
